racket-tracker/client/src/features/viewItem/ViewItem.css
.item-page {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
    overflow-x: hidden;
}

.order-header {
    box-sizing: border-box;
    width: auto;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    border: 5px solid;
    border-radius: 10pt;
    border-color: rgb(0, 0, 0, 0.9);
    background-color: rgb(0, 0, 0, 0.2);
    margin: 15pt;
    padding: 20pt;
    font-size: x-large;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
    font-weight: 700;
}

.order-header--complete {
    border-color: rgb(51, 81, 51);
    background-color: rgb(95, 143, 95);;
}

.order-header--late {
    color: white;
    border-color: rgba(157, 40, 38, 0.804);
    background-color: rgb(62, 9, 9);;
}

.order-header div {
    margin: 15pt;
}

.item-card {
    position: relative;
    border-radius: 5pt;
    background-color: lightgrey;
    column-gap: 10px;
    align-items: center;
    min-height: 200px;
    width: 700px;
    margin: 25pt;
    padding: 10pt 25pt;
    justify-content: space-between;
}

.item-fields {
    width: 60%;
    display: grid;
    grid-template-columns: auto auto;
    gap: 25px;
    align-items: center;
    justify-items: start;
}

.field-label {
    display: flex;
    justify-self: right;
    width: fit-content;
    height: fit-content;
    border-radius: 5pt;
    padding: 5pt;

    color: black;
    background-color: var(--primary);

    text-align: right;
    font-size: large;
    font-family: Arial, Helvetica, sans-serif;
}

/* .string-directions {
    display: flex;
    flex-direction: column;
} */

.item-actions {
    position: absolute;
    top: 10px;
    right: 10px;
    display: flex;
    flex-direction: column;
    height: fit-content;
    margin: 10px;
    padding: 5pt 10pt;
}

.action-btn {
    background-color: var(--primary);
    border-radius: 5pt;
    margin: 5pt;
    padding: 5pt;
}

.action-btn:hover {
    background-color: var(--primary-transparent);
}

